--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -21,6 +21,9 @@
     ~/.tmux.conf: tmux.conf
     ~/.gitconfig: gitconfig
     ~/.bash_profile: bash_profile
+    ~/.oh-my-zsh:
+        path: oh-my-zsh
+        force: tre
     ~/.zshrc:
         path: zshrc
         force: true
