--- a/tmux.conf
+++ b/tmux.conf
@@ -20,6 +20,7 @@ set -g @continuum-restore 'on'
 # set -g default-terminal "screen"
 set -g default-terminal "screen-256color"
 # set -g default-terminal "xterm"
+set-option -sg escape-time 10
 
 set-option -g status on
 set -g status on
