fix alacritty link

--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -19,7 +19,9 @@
     ~/.bash_profile: bash_profile
     ~/.bashrc: bashrc
     ~/.aliases: aliases
-    ~/.alacritty.yml: alacritty.yml
+    ~/.alacritty.yml:
+        path: alacritty.yml
+        force: true
     ~/.functions: functions
     ~/.config:
         path: config/*
