--- a/alacritty.yml
+++ b/alacritty.yml
@@ -26,8 +26,8 @@ window:
   # Blank space added around the window in pixels. This padding is scaled
   # by DPI and the specified value is always added at both opposing sides.
   padding:
-    x: 2
-    y: 2
+    x: 0
+    y: 0
 
   # Spread additional padding evenly around the terminal content.
   dynamic_padding: false
@@ -81,8 +81,8 @@ font:
   # Normal (roman) font face
   #normal:
   normal:
-    family: "FuraCode Nerd Font" # should be "Menlo" or something on macOS.
-    # family: "Mplus Nerd Font" # should be "Menlo" or something on macOS.
+    # family: "FuraCode Nerd Font" # should be "Menlo" or something on macOS.
+    family: "M+ 1mn" # should be "Menlo" or something on macOS.
     # Style can be specified to pick a specific face.
     # style: Regular
     # Font family
