--- a/tmux.conf
+++ b/tmux.conf
@@ -13,6 +13,8 @@ set -g @plugin 'tmux-plugins/tmux-yank'
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
 set -g @continuum-restore 'on'
+set -g @resurrect-strategy-nvim 'session'
+set -g @resurrect-capture-pane-contents 'on'
 # set-option -g default-shell /bin/zsh
 # setw -g mode-mouse on
 # set -g utf8
