--- a/tmux.conf
+++ b/tmux.conf
@@ -11,7 +11,7 @@ set -g @plugin 'tmux-plugins/tmux-yank'
 # set -g @plugin 'git@bitbucket.com/user/plugin'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
-run '~/.tmux/plugins/tpm/tpm'
+run '$HOME/.tmux/plugins/tpm/tpm'
 set -g @continuum-restore 'on'
 set -g @resurrect-strategy-nvim 'session'
 set -g @resurrect-capture-pane-contents 'on'
@@ -67,10 +67,10 @@ bind k select-pane -U
 bind l select-pane -R
 
 # Use Alt-vim keys without prefix key to switch panes
-# bind -n M-h select-pane -L
-# bind -n M-j select-pane -D
-# bind -n M-k select-pane -U
-# bind -n M-l select-pane -R
+bind -n M-h select-pane -L
+bind -n M-j select-pane -D
+bind -n M-k select-pane -U
+bind -n M-l select-pane -R
 # vi-style copying
 bind-key -T copy-mode-vi 'v' send -X begin-selection
 bind-key -T copy-mode-vi 'y' send -X copy-selection-and-cancel
@@ -82,5 +82,5 @@ bind-key -T copy-mode-vi 'y' send -X copy-selection-and-cancel
 set -g pane-border-fg green
 set -g pane-border-bg black
 set -g pane-active-border-fg white
-# set -g pane-active-border-bg yellow
-set -g pane-active-border-bg default
+set -g pane-active-border-bg white
+# set -g pane-active-border-bg default
