add tmux yank bind

--- a/tmux.conf
+++ b/tmux.conf
@@ -73,7 +73,8 @@ bind -n M-k select-pane -U
 bind -n M-l select-pane -R
 # vi-style copying
 bind-key -T copy-mode-vi 'v' send -X begin-selection
-bind-key -T copy-mode-vi 'y' send -X copy-selection-and-cancel
+# bind-key -T copy-mode-vi 'y' send -X copy-selection-and-cancel
+bind-key -T copy-mode-vi 'y' send -X copy-pipe-and-cancel "xclip -sel clip -i"
 
 # Import macOS-only config
 # if-shell 'test "$(uname -s)" = Darwin' 'source-file ~/.tmux-osx.conf'
@@ -82,5 +83,8 @@ bind-key -T copy-mode-vi 'y' send -X copy-selection-and-cancel
 set -g pane-border-fg green
 set -g pane-border-bg black
 set -g pane-active-border-fg white
-set -g pane-active-border-bg white
-# set -g pane-active-border-bg default
+# set -g pane-active-border-bg white
+set -g pane-active-border-bg default
+
+set -g @yank_selection 'primary' # 'primary' or 'secondary' or 'clipboard'
+set -g @shell_mode 'vi'
