--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -29,6 +29,16 @@
         force: true
     ~/.functions: functions
     ~/.variables: variables
+    ~/.taskrc:
+        path: taskrc
+        glob: true
+        force: true
+        create: true
+    ~/.task:
+        path: task/*
+        glob: true
+        force: true
+        create: true
     ~/.fonts:
         path: fonts/*
         glob: true
