--- a/config/pip/pip.conf
+++ b/config/pip/pip.conf
@@ -16,7 +16,9 @@
 no-cache-dir = false
 ignore-installed = true
 # no-dependencies = no
+index-url = https://pypi.org/simple/
 extra-index-url = http://etspip/ets/pypi/+simple/
+trusted-host = etspip
 # find-links =
     # http://mirror1.example.com
     # http://mirror2.example.com
