--- a/tmux.conf
+++ b/tmux.conf
@@ -42,7 +42,7 @@ bind r source-file ~/.tmux.conf
 
 # alternatively, check file exists before sourcing it in tmux.conf
 #if-shell "test -f ~/.tmuxline.conf" "source ~/.tmuxline.conf"
-source "/home/mgreco/.local/lib/python3.6/site-packages/powerline/bindings/tmux/powerline.conf"
+source "$HOME/.local/lib/python3.6/site-packages/powerline/bindings/tmux/powerline.conf"
  # source "~/miniconda3/lib/python3.7/site-packages/powerline/bindings/tmux/powerline.conf"
 # source "/home/mgreco/miniconda3/lib/python3.7/site-packages/powerline/bindings/tmux/powerline.conf"
 # address vim mode switching delay (http://superuser.com/a/252717/65504)
