rename path to relative path

--- a/tmux.conf
+++ b/tmux.conf
@@ -44,7 +44,7 @@ bind r source-file ~/.tmux.conf
 #if-shell "test -f ~/.tmuxline.conf" "source ~/.tmuxline.conf"
 source "$HOME/.local/lib/python3.6/site-packages/powerline/bindings/tmux/powerline.conf"
  # source "~/miniconda3/lib/python3.7/site-packages/powerline/bindings/tmux/powerline.conf"
-# source "/home/mgreco/miniconda3/lib/python3.7/site-packages/powerline/bindings/tmux/powerline.conf"
+# source "$HOME/miniconda3/lib/python3.7/site-packages/powerline/bindings/tmux/powerline.conf"
 # address vim mode switching delay (http://superuser.com/a/252717/65504)
 # set -s escape-time 0
 
