update nvin wiki

--- a/tmux.conf
+++ b/tmux.conf
@@ -21,7 +21,6 @@ set -g default-terminal "tmux-256color"
 set -g default-command /usr/bin/zsh
 # set -g default-terminal "xterm"
 set-option -sg escape-time 10
-
 set-option -g status on
 set -g status on
 
@@ -63,13 +62,14 @@ set-option -g mouse on
 unbind p
 bind p paste-buffer
 # Vim style pane selection
-bind h select-pane -L
-bind j select-pane -D
-bind k select-pane -U
-bind l select-pane -R
+# bind h select-pane -L
+# bind j select-pane -D
+# bind k select-pane -U
+# bind l select-pane -R
 
 # vi-style copying
 bind-key -T copy-mode-vi 'v' send -X begin-selection
 bind-key -T copy-mode-vi 'y' send -X copy-selection-and-cancel
 
+# due to vim-navigator we lost ctlr-l for clean terminal output below command recover it.
 bind C-l send-keys 'C-l'
