--- a/tmux.conf
+++ b/tmux.conf
@@ -73,3 +73,4 @@ bind-key -T copy-mode-vi 'y' send -X copy-selection-and-cancel
 
 # due to vim-navigator we lost ctlr-l for clean terminal output below command recover it.
 bind C-l send-keys 'C-l'
+bind C-x setw synchronize-panes
