--- a/tmux.conf
+++ b/tmux.conf
@@ -21,9 +21,8 @@ set -g default-terminal "tmux-256color"
 set -g default-command /usr/bin/zsh
 # set -g default-terminal "xterm"
 set-option -sg escape-time 10
-set-option -g status on
 set -g status on
-
+# set-option -g status on
 set-option -g status-position top
 
 # Taken from http://unix.stackexchange.com/questions/12032/create-new-window-with-current-directory-in-tmux
@@ -68,8 +67,8 @@ bind p paste-buffer
 # bind l select-pane -R
 
 # vi-style copying
-bind-key -T copy-mode-vi 'v' send -X begin-selection
-bind-key -T copy-mode-vi 'y' send -X copy-selection-and-cancel
+# bind-key -T copy-mode-vi 'v' send -X begin-selection
+# bind-key -T copy-mode-vi 'y' send -X copy-selection-and-cancel
 
 # due to vim-navigator we lost ctlr-l for clean terminal output below command recover it.
 bind C-l send-keys 'C-l'
