--- a/config/pip/pip.conf
+++ b/config/pip/pip.conf
@@ -14,7 +14,7 @@
 
 [install]
 no-cache-dir = false
-ignore-installed = true
+ignore-installed = false
 # no-dependencies = no
 index-url = https://pypi.org/simple/
 extra-index-url = http://etspip/ets/pypi/+simple/
