--- a/tmux.conf
+++ b/tmux.conf
@@ -69,6 +69,8 @@ bind p paste-buffer
 # vi-style copying
 # bind-key -T copy-mode-vi 'v' send -X begin-selection
 # bind-key -T copy-mode-vi 'y' send -X copy-selection-and-cancel
+# set -g @yank_selection 'primary' # 'primary' or 'secondary' or 'clipboard'
+set -g @yank_selection 'clipboard' # 'primary' or 'secondary' or 'clipboard'
 
 # due to vim-navigator we lost ctlr-l for clean terminal output below command recover it.
 bind C-l send-keys 'C-l'
