ENH: Add new folders and update config
Add ubuntu packages dependencies
Update nvim extension
Organize scripts.

--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -28,6 +28,7 @@
         path: bash_profile
         create: true
     ~/.bashrc: bashrc
+    ~/.xonsh: xonsh
     ~/.aliases: aliases
     ~/.alacritty.yml:
         path: alacritty.yml
