--- a/tmux.conf
+++ b/tmux.conf
@@ -55,7 +55,7 @@ bind-key V choose-window 'join-pane -h -s "%%"'
 # bind-key s command-prompt -p "send pane to:"    "join-pane -t '%%'"
 
 ### .tmux.conf
-# set-window-option -g mode-keys vi
+set-window-option -g mode-keys vi
 setw -g mode-keys vi
 set-option -g mouse on
 unbind p
@@ -67,7 +67,7 @@ bind p paste-buffer
 # bind l select-pane -R
 
 # vi-style copying
-# bind-key -T copy-mode-vi 'v' send -X begin-selection
+bind-key -T copy-mode-vi 'v' send -X begin-selection
 # bind-key -T copy-mode-vi 'y' send -X copy-selection-and-cancel
 # set -g @yank_selection 'primary' # 'primary' or 'secondary' or 'clipboard'
 set -g @yank_selection 'clipboard' # 'primary' or 'secondary' or 'clipboard'
