--- a/alacritty.yml
+++ b/alacritty.yml
@@ -81,8 +81,10 @@ font:
   # Normal (roman) font face
   #normal:
   normal:
+    family: "FuraCode Nerd Font" # should be "Menlo" or something on macOS.
+    # family: "mplus Nerd Font,M+ 1mn"
     # family: "FuraCode Nerd Font" # should be "Menlo" or something on macOS.
-    family: "M+ 1mn" # should be "Menlo" or something on macOS.
+    # family: "M+ 1mn" # should be "Menlo" or something on macOS.
     # Style can be specified to pick a specific face.
     # style: Regular
     # Font family
