--- a/config/pip/pip.conf
+++ b/config/pip/pip.conf
@@ -14,10 +14,10 @@
 
 [install]
 no-cache-dir = false
-ignore-installed = false
+# ignore-installed = false
 # no-dependencies = no
-index-url = https://pypi.org/simple/
-extra-index-url = http://etspip/ets/pypi/+simple/
+# index-url = https://pypi.org/simple/
+# extra-index-url = http://etspip/ets/pypi/+simple/
 trusted-host = etspip
 # find-links =
     # http://mirror1.example.com
