--- a/alacritty.yml
+++ b/alacritty.yml
@@ -81,7 +81,8 @@ font:
   # Normal (roman) font face
   #normal:
   normal:
-    family: "FuraCode Nerd Font" # should be "Menlo" or something on macOS.
+    # family: "FuraCode Nerd Font" # should be "Menlo" or something on macOS.
+    family: "M+ 1m" # should be "Menlo" or something on macOS.
     # family: "mplus Nerd Font,M+ 1mn"
     # family: "FuraCode Nerd Font" # should be "Menlo" or something on macOS.
     # family: "M+ 1mn" # should be "Menlo" or something on macOS.
