--- a/alacritty.yml
+++ b/alacritty.yml
@@ -82,8 +82,8 @@ font:
   #normal:
   normal:
     # family: "FuraCode Nerd Font" # should be "Menlo" or something on macOS.
-    family: "M+ 1m" # should be "Menlo" or something on macOS.
-    # family: "mplus Nerd Font,M+ 1mn"
+    # family: "M+ 1m" # should be "Menlo" or something on macOS.
+    family: "mplus NF"
     # family: "FuraCode Nerd Font" # should be "Menlo" or something on macOS.
     # family: "M+ 1mn" # should be "Menlo" or something on macOS.
     # Style can be specified to pick a specific face.
