fix cntrl-v closes window tmux pane

--- a/tmux.conf
+++ b/tmux.conf
@@ -16,8 +16,8 @@ set -g @continuum-restore 'on'
 set -g @resurrect-strategy-nvim 'session'
 set -g @resurrect-capture-pane-contents 'on'
 # set -g default-terminal "screen"
-# set -g default-terminal "screen-256color"
-set -g default-terminal "tmux-256color"
+set -g default-terminal "screen-256color"
+# set -g default-terminal "tmux-256color"
 set -g default-command /usr/bin/zsh
 # set -g default-terminal "xterm"
 set-option -sg escape-time 10
@@ -75,3 +75,10 @@ set -g @yank_selection 'clipboard' # 'primary' or 'secondary' or 'clipboard'
 # due to vim-navigator we lost ctlr-l for clean terminal output below command recover it.
 bind C-l send-keys 'C-l'
 bind C-x setw synchronize-panes
+
+# add weather in the status bar
+# WEATHER='#(curl -s wttr.in/Madrid:Pozuelo\?format\="%%l:+%%c%%20%%t%%60%%w&period=60")'
+# set -g status-interval 60
+# set -g status-right "$WEATHER#[fg=colour7]#[bg=colour7] #[fg=colour2]#(~/dotfiles/tmux_scripts/uptime.sh) #[fg=colour1]#[fg=colour3]#[bg=colour3]#[fg=colour0] #(~/dotfiles/tmux_scripts/music.sh) #[bg=colour3]#[fg=colour1]"
+# set -g status-right-length 200
+
