--- a/tmux.conf
+++ b/tmux.conf
@@ -10,6 +10,10 @@ set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
 set -g @plugin 'tmux-plugins/tmux-yank'
 
+# Reload a file when it changes.
+# https://unix.stackexchange.com/a/383044
+set -g focus-events oN
+
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '$HOME/.tmux/plugins/tpm/tpm'
 set -g @continuum-restore 'on'
