--- a/packages/python/requirements3.6.txt
+++ b/packages/python/requirements3.6.txt
@@ -1,63 +1,72 @@
-aspy.yaml==1.3.0
+appdirs==1.4.3
 astroid==2.2.5
-atomicwrites==1.3.0
-attrs==19.1.0
+autobahn==19.8.1
+autoenv==1.0.0
+autoflake==1.3.1
+Automat==0.7.0
 autopep8==1.4.3
-bugwarrior==1.7.0
-cachetools==3.1.1
-cfgv==2.0.0
-chardet==3.0.4
+boa==1.6.1+2.gb7d32da
+Bottleneck==1.2.1
+cachelib==0.1
 Click==7.0
-coverage==4.5.3
-decorator==4.4.0
-docopt==0.6.2
-dogpile.cache==0.7.1
+constantly==15.1.0
+cssselect==1.1.0
+docker==3.7.3
+docker-py==1.10.6
+docker-pycreds==0.4.0
+fbm==0.3.0
+filelock==3.0.12
 future==0.17.1
-google-api-python-client==1.7.9
-google-auth==1.6.3
-google-auth-httplib2==0.0.3
 greenlet==0.4.15
-identify==1.4.5
-importlib-metadata==0.18
-importlib-resources==1.0.2
-isort==4.3.16
+hkdf==0.0.3
+howdoi==1.2.1
+humanize==0.5.1
+hurst-ets==0.0.0
+hyperlink==19.0.0
+importlib-metadata==0.20
+incremental==17.5.0
+isort==4.3.17
 jedi==0.13.3
-Jinja2==2.10.1
-kitchen==1.2.5
+joblib==0.13.2
 lazy-object-proxy==1.3.1
-lockfile==0.12.2
+llvmlite==0.29.0
+lxml==4.4.1
+magic-wormhole==0.11.2
 mccabe==0.6.1
-more-itertools==7.0.0
+more-itertools==7.2.0
 msgpack==0.6.1
-neovim==0.3.1
-nodeenv==1.3.3
-oauth2client==3.0.0
+numba==0.45.0
+numexpr==2.6.9
 parso==0.4.0
-pipreqs==0.4.9
-powerline-status==2.7
-powerline-taskwarrior==0.7.3
-pre-commit==1.17.0
+pluggy==0.12.0
 py==1.8.0
-pyasn1==0.4.5
-pyasn1-modules==0.2.5
+py2nb==0.0.4
+pyasn1==0.4.6
+pyasn1-modules==0.2.6
 pycodestyle==2.5.0
+pydockenv==0.3.1
 pydocstyle==3.0.0
 pyflakes==2.1.1
+PyHamcrest==1.9.0
 pylint==2.3.1
+PyNaCl==1.3.0
 pynvim==0.3.2
-pytest-cov==2.7.1
+pyquery==1.4.0
 python-jsonrpc-server==0.1.2
-PyYAML==5.1.1
+python-language-server==0.26.1
 rope==0.14.0
-rsa==4.0
-six==1.12.0
-snowballstemmer==1.2.1
-taskw==1.2.0
+scikit-learn==0.21.3
+service-identity==18.1.0
+spake2==0.8
 toml==0.10.0
+tox==3.14.0
+Twisted==19.7.0
+txaio==18.8.1
+txtorcon==19.0.0
 typed-ast==1.3.1
-uritemplate==3.0.0
-virtualenv==16.6.1
+virtualenv==16.7.5
+websocket-client==0.56.0
 wrapt==1.11.1
-yapf==0.26.0
-yarg==0.1.9
-zipp==0.5.1
+yapf==0.27.0
+zipp==0.6.0
+zope.interface==4.6.0
