--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -48,11 +48,11 @@ bind-key C-b new-window "gotty tmux attach -t `tmux display -p '#S'`"
 
 bind T split-window -b -h -c "#{pane_current_path}" "[[ -e TODO.md ]] && nvim TODO.md || nvim $HOME/TODO.md"
 # bind C split-window -b -h -c "#{pane_current_path}" "nvim TODO.md"
-bind P split-window -b -h -c "#{pane_current_path}" "nvim +':cd ~/etsgit/mgreco/scrums' +':e latest.md'"
+bind P split-window -b -h -c "#{pane_current_path}" "cd ~/etsgit/mgreco/scrums; nvim +':e latest.md'; git commit -a -m 'update' && git push"
 bind G split-window -b -h -c "#{pane_current_path}" "glab issue ls || glab issue ls -R 'COM/com_on/product_backlog'"
 bind B split-window -b -h -c "#{pane_current_path}" "glab issue ls -R 'COM/com_on/product_backlog'"
-bind D split-window -b -h -c "#{pane_current_path}" "nvim +':cd ~/.dotfiles' +':e .'"
-bind W split-window -b -h -c "#{pane_current_path}" "nvim +':cd ~/github/mmngreco/scio' +':e .'"
+bind D split-window -b -h -c "#{pane_current_path}" "cd ~/.dotfiles ; nvim +':e .'"
+bind W split-window -b -h -c "#{pane_current_path}" "cd ~/github/mmngreco/scio; nvim +':e .'"
 
 # new vertical pane
 bind % split-window -h -c "#{pane_current_path}"
