--- a/terminal/kitty.conf
+++ b/terminal/kitty.conf
@@ -1,88 +1,87 @@
-+ACM vim:fileencoding+AD0-utf-7:ft+AD0-conf:foldmethod+AD0-marker
-+ACM font+AF8-family      mplus Nerd Font Mono
-+ACM font+AF8-family      ubuntu
-font+AF8-family      Cascadia Code PL
-bold+AF8-font        auto
-italic+AF8-font      auto
-bold+AF8-italic+AF8-font auto
-font+AF8-size 14.0
-+ACM active+AF8-tab+AF8-foreground   +ACM-000
-active+AF8-tab+AF8-background   +ACM-eee
-active+AF8-tab+AF8-font+AF8-style   bold-italic
-+ACM inactive+AF8-tab+AF8-foreground +ACM-444
-+ACM inactive+AF8-tab+AF8-background +ACM-999
-+ACM inactive+AF8-tab+AF8-font+AF8-style normal
+# font_family      mplus Nerd Font Mono
+# font_family      ubuntu
+font_family      Cascadia Code PL
+bold_font        auto
+italic_font      auto
+bold_italic_font auto
+font_size 14.0
+# active_tab_foreground   #000
+active_tab_background   #eee
+active_tab_font_style   bold-italic
+# inactive_tab_foreground #444
+# inactive_tab_background #999
+# inactive_tab_font_style normal
 
-+ACM gruvbox dark by morhetz, https://github.com/morhetz/gruvbox
-+ACM This work is licensed under the terms of the MIT license.
-+ACM For a copy, see https://opensource.org/licenses/MIT.
+# gruvbox dark by morhetz, https://github.com/morhetz/gruvbox
+# This work is licensed under the terms of the MIT license.
+# For a copy, see https://opensource.org/licenses/MIT.
 
-background  +ACM-282828
-foreground  +ACM-ebdbb2
+background  #282828
+foreground  #ebdbb2
 
-cursor                +ACM-928374
-cursor+AF8-shape     block
-shell+AF8-integration no-cursor
+cursor                #928374
+cursor_shape     block
+shell_integration no-cursor
 
-selection+AF8-foreground  +ACM-928374
-selection+AF8-background  +ACM-3c3836
+selection_foreground  #928374
+selection_background  #3c3836
 
-color0  +ACM-282828
-color8  +ACM-928374
+color0  #282828
+color8  #928374
 
-+ACM red
-color1                +ACM-cc241d
-+ACM light red
-color9                +ACM-fb4934
+# red
+color1                #cc241d
+# light red
+color9                #fb4934
 
-+ACM green
-color2                +ACM-98971a
-+ACM light green
-color10               +ACM-b8bb26
+# green
+color2                #98971a
+# light green
+color10               #b8bb26
 
-+ACM yellow
-color3                +ACM-d79921
-+ACM light yellow
-color11               +ACM-fabd2d
+# yellow
+color3                #d79921
+# light yellow
+color11               #fabd2d
 
-+ACM blue
-color4                +ACM-458588
-+ACM light blue
-color12               +ACM-83a598
+# blue
+color4                #458588
+# light blue
+color12               #83a598
 
-+ACM magenta
-color5                +ACM-b16286
-+ACM light magenta
-color13               +ACM-d3869b
+# magenta
+color5                #b16286
+# light magenta
+color13               #d3869b
 
-+ACM cyan
-color6                +ACM-689d6a
-+ACM lighy cyan
-color14               +ACM-8ec07c
+# cyan
+color6                #689d6a
+# lighy cyan
+color14               #8ec07c
 
-+ACM light gray
-color7                +ACM-a89984
-+ACM dark gray
-color15               +ACM-928374
+# light gray
+color7                #a89984
+# dark gray
+color15               #928374
 
-selection+AF8-background +ACM-d4be98
-selection+AF8-foreground +ACM-1d2021
+selection_background #d4be98
+selection_foreground #1d2021
 
-cursor +ACM-a89984
-cursor+AF8-text+AF8-color background
+cursor #a89984
+cursor_text_color background
 
-active+AF8-tab+AF8-background +ACM-1d2021
-active+AF8-tab+AF8-foreground +ACM-d4be98
-active+AF8-tab+AF8-font+AF8-style bold
-inactive+AF8-tab+AF8-background +ACM-1d2021
-inactive+AF8-tab+AF8-foreground +ACM-a89984
-inactive+AF8-tab+AF8-font+AF8-style normal
+active_tab_background #1d2021
+active_tab_foreground #d4be98
+active_tab_font_style bold
+inactive_tab_background #1d2021
+inactive_tab_foreground #a89984
+inactive_tab_font_style normal
 
-+ACM transparency yes
-+ACM dynamic+AF8-background+AF8-opacity yes
-+ACM dim+AF8-opacity 0.8
-+ACM background+AF8-tint 0.0
-background+AF8-opacity 0.85
+# transparency yes
+# dynamic_background_opacity yes
+# dim_opacity 0.8
+# background_tint 0.0
+background_opacity 0.85
 
-allow+AF8-remote+AF8-control yes
-listen+AF8-on unix:/tmp/mykitty
+allow_remote_control yes
+listen_on unix:/tmp/mykitty
