--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -4,14 +4,6 @@ set $alt Mod1
 
 # Use: xrandr command to check monitor names.
 
-# professional laptop
-set $monitor_laptop eDP
-# set $monitor_hdmi HDMI-A-0
-set $monitor_hdmi DisplayPort-1
-
-# personal laptop
-set $monitor_laptop eDP-1
-set $monitor_hdmi DP-2
 
 # set font
 font pango:ubuntu 10
@@ -153,19 +145,24 @@ bindsym $super+r mode "resize"
 
 # =============================================================================
 # Focus
-#
 
-workspace 1 output $monitor_hdmi
-workspace 2 output $monitor_hdmi
-workspace 3 output $monitor_hdmi
-workspace 4 output $monitor_hdmi
-workspace 5 output $monitor_hdmi
-
+set $monitor_laptop eDP
+set $monitor_laptop eDP-1
 workspace 6 output $monitor_laptop
 workspace 7 output $monitor_laptop
 workspace 8 output $monitor_laptop
 workspace 9 output $monitor_laptop
 workspace 0 output $monitor_laptop
+
+
+set $monitor_hdmi HDMI-A-0
+set $monitor_hdmi DisplayPort-1
+set $monitor_hdmi DP-2
+workspace 1 output $monitor_hdmi
+workspace 2 output $monitor_hdmi
+workspace 3 output $monitor_hdmi
+workspace 4 output $monitor_hdmi
+workspace 5 output $monitor_hdmi
 
 bindsym $super+1 workspace 1
 bindsym $super+2 workspace 2
