--- a/ubuntu.yaml
+++ b/ubuntu.yaml
@@ -11,13 +11,13 @@
       recursive: true
 
 - link:
-    # ~/.config/regolith2/i3/config: regolith/i3/config
-    # ~/.config/regolith2/i3/config.d/:
-    #   path: regolith/i3/config.d/*
-    #   glob: true
+    ~/.config/pulse/default.pa: pulse/default.pa
+    ~/.config/regolith2/i3/config: regolith/i3/config
+    ~/.config/regolith2/i3/config.d/:
+      path: regolith/i3/config.d/*
+      glob: true
     ~/.dotfiles: .
-    # ~/.config/pulse/default.pa: pulse/default.pa
-    # ~/.octaverc: octave/octaverc
+    ~/.octaverc: octave/octaverc
     ~/.gitconfig: git/gitconfig
     ~/.docker/config.json: docker/.docker/config.json
 
@@ -25,25 +25,25 @@
     ~/.tmux.conf: tmux/tmux.conf
 
     # shell
-    # ~/.aliases: shell/aliases
+    ~/.aliases: shell/aliases
     ~/.bash_profile: shell/bash_profile
     ~/.bashrc: shell/bashrc
-    # ~/.zshrc: shell/zshrc
+    ~/.zshrc: shell/zshrc
     ~/.inputrc: shell/inputrc
-    # ~/.profile: shell/profile
+    ~/.profile: shell/profile
 
     # i3
-    # ~/.config:
-      # path: i3/.config/**
-      # glob: true
-    # ~/.Xresources: i3/.Xresources
-    # ~/.xprofile: i3/.xprofile
-    # ~/.xsettingsd: i3/.xsettingsd
+    ~/.config:
+      path: i3/.config/**
+      glob: true
+    ~/.Xresources: i3/.Xresources
+    ~/.xprofile: i3/.xprofile
+    ~/.xsettingsd: i3/.xsettingsd
 
     # terminal
-    # ~/.Xdefaults: i3/.Xdefaults
+    ~/.Xdefaults: i3/.Xdefaults
     ~/.config/kitty/kitty.conf: terminal/kitty.conf
-    # ~/.config/alacritty/alacritty.yml: terminal/alacritty.yml
+    ~/.config/alacritty/alacritty.yml: terminal/alacritty.yml
 
     # vim
     ~/.config/nvim:
