--- a/docker/.docker/config.json
+++ b/docker/.docker/config.json
@@ -1,6 +1,8 @@
 {
-	"auths": {},
+	"auths": {
+		"https://index.docker.io/v1/": {}
+	},
 	"detachKeys": "ctrl-z,z",
-	"credsStore": "desktop",
+	"credsStore": "pass",
 	"currentContext": "default"
 }
