--- a/ubuntu.yaml
+++ b/ubuntu.yaml
@@ -24,6 +24,7 @@
     ~/.bash_profile: shell/bash_profile
     ~/.bashrc: shell/bashrc
     ~/.zshrc: shell/zshrc
+    ~/.zprofile: shell/zshrc
     ~/.inputrc: shell/inputrc
     ~/.profile: shell/profile
 
