--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -90,7 +90,7 @@ bind -n ê resize-pane -D 5
 
 # vi-style copying
 set-window-option -g mode-keys vi
-set -g set-clipboard off
+set -g set-clipboard on
 
 unbind-key -T copy-mode-vi MouseDragEnd1Pane
 bind-key -T copy-mode-vi MouseDown1Pane select-pane\; send-keys -X clear-selection
