--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -5,8 +5,8 @@ bind C-a send-prefix
 set -g history-limit 50000
 # set -g default-terminal 'screen-256color'
 # set -wg xterm-keys on
-# set -g default-terminal 'tmux-256color'
-set-option -sa terminal-overrides ",$TERM:RGB"
+set -g default-terminal 'tmux-256color'
+# set-option -sa terminal-overrides ",$TERM:RGB"
 
 set -g base-index 1
 setw -g pane-base-index 1
@@ -128,7 +128,7 @@ set -g status-left "#[fg=colour16,bg=colour254,bold] #S "
 set -g status-left-length "100"
 set -g status-left-style "none"
 set -g status "on"
-set -g status-right "#[fg=colour247,bg=colour236] %Y-%m-%d #[fg=colour247,bg=colour238] %H:%M #[fg=colour252,bg=colour236,nobold,nounderscore,noitalics] #h "
+set -g status-right "#[fg=colour247,bg=colour236] %Y-%m-%d #[fg=colour247,bg=colour57] %H:%M #[fg=colour252,bg=colour88,nobold,nounderscore,noitalics] #h "
 # set -g status-right "#[fg=colour236,bg=colour234,nobold,nounderscore,noitalics]#[fg=colour247,bg=colour236]%Y-%m-%d #[fg=colour238]#[fg=colour247,bg=colour238]%H:%M #[fg=colour252,bg=colour236,nobold,nounderscore,noitalics]#[fg=colour235,bg=colour252]#h  "
 set -g status-right-length "100"
 set -g status-right-style "none"
