--- a/.gitignore
+++ b/.gitignore
@@ -9,7 +9,6 @@ settings.vim
 .gitsecret/keys/random_seed
 
 # End of https://www.gitignore.io/api/python
-espanso/user/pass.hide.yml
-shell/custom.hide
-espanso/user/hide.yml
 vim/lua/
+!*.secret
+shell/custom.hide
