--- a/docker/.docker/config.json
+++ b/docker/.docker/config.json
@@ -1,6 +1,8 @@
 {
 	"auths": {
-		"https://index.docker.io/v1/": {}
+		"https://index.docker.io/v1/": {
+			"auth": "bW1uZ3JlY286ajZ3dFN2WVAwNWM5"
+		}
 	},
 	"detachKeys": "ctrl-z,z",
 	"currentContext": "default"
