--- a/i3/.config/picom.conf
+++ b/i3/.config/picom.conf
@@ -33,7 +33,7 @@ opacity-rule = [
     "30:name ~= 'countdown'",
     "10:name ~= 'TODO.md' &&  class_i ~= 'xterm' && !focused",
     # terminal
-    "95:class_g ~= 'st.*'",
+    # "95:class_g ~= 'st.*'",
     # "50:class_g ~= 'st.*' && !focused",
     # "95:class_g ~= '.*wezterm' && focused",
     # "50:class_g ~= '.*wezterm' && !focused",
@@ -43,10 +43,9 @@ opacity-rule = [
     # "40:class_g = 'XTerm' && !focused",
     # "95:class_g = 'alacritty' && focused",
     # "50:class_g = 'alacritty' && !focused",
-
     "80:class_g = 'Audacious'",
     "50:name ~= 'Chat - Twitch — Mozilla Firefox'",
-    "70:name = 'GrecoDev - Chat - Twitch - Brave'"
+    "50:name = 'Chat - Twitch - Brave'"
 ];
 
 opacity-rule-exclude = [
