--- a/ubuntu/i3/.config/i3/config
+++ b/ubuntu/i3/.config/i3/config
@@ -114,6 +114,8 @@ floating_modifier $super
 # key bindings
 # ----------------------------------------------------------------------------
 
+# bindsym $super+g exec bash $DOTFILES/rofi/rofi-gpt.sh
+bindsym $super+g exec st -T "st:ChatGPT" -f "Caskaydia Cove Nerd Font:pixelsize=14" -e chatgpt
 ## Make the currently focused window a scratchpad
 bindsym $super+Shift+minus move scratchpad
 ## Show the first scratchpad window
@@ -299,7 +301,7 @@ bindsym $super+Tab workspace next
 bindsym $super+Shift+Tab workspace prev
 
 bindsym $super+f fullscreen
-bindsym $super+g fullscreen global
+# bindsym $super+g fullscreen global
 bindsym $super+y fullscreen disable; floating enable; resize set 600 450; sticky enable; move window to position 1940 54
 
 bindsym $super+z layout stacking
@@ -462,6 +464,7 @@ for_window [class="Matplotlib"] floating enable, resize set 500 px 400 px, move 
 for_window [title="bar:.*"] floating enable, move position center
 for_window [title="bar:countdown"] floating enable, resize set 700 px 200 px, move position center
 for_window [title="bar:MyTODO.md"] floating enable, resize set 500 px 400 px, move position right
+for_window [title="st:ChatGPT"] floating enable, resize set 600 px 600 px, move position center
 
 
 # autostart
