--- a/ubuntu/home/.docker/config.json
+++ b/ubuntu/home/.docker/config.json
@@ -1,1 +1,8 @@
-/home/mgreco/github/mmngreco/dotfiles/ubuntu/docker/.docker/config.json
+{
+	"auths": {
+		"https://index.docker.io/v1/": {
+			"auth": "bW1uZ3JlY286ajZ3dFN2WVAwNWM5"
+		}
+	},
+	"detachKeys": "ctrl-z,z"
+}
