--- a/ubuntu/ubuntu.yaml
+++ b/ubuntu/ubuntu.yaml
@@ -6,36 +6,39 @@
 - link:
     # Home
     ~/.dotfiles                                  : .
-    ~/.pdbrc.py                                  : ubuntu/home/.pdbrc.py
-    ~/.Xresources                                : ubuntu/home/.Xresources
-    ~/.gitconfig                                 : ubuntu/home/.gitconfig
-    ~/.common.sh                                 : ubuntu/home/.common.sh
-    ~/.condarc                                   : ubuntu/home/.condarc
-    ~/.prompt.zsh                                : ubuntu/home/.prompt.zsh
-    ~/.bash_profile                              : ubuntu/home/.bash_profile
-    ~/.zprofile                                  : ubuntu/home/.zprofile
-    ~/.bashrc                                    : ubuntu/home/.bashrc
-    ~/.inputrc                                   : ubuntu/home/.inputrc
-    ~/.Xdefaults                                 : ubuntu/home/.Xdefaults
-    ~/.prompt.sh                                 : ubuntu/home/.prompt.sh
-    ~/.zshrc                                     : ubuntu/home/.zshrc
-    ~/.profile                                   : ubuntu/home/.profile
-    ~/.tmux.conf                                 : ubuntu/home/.tmux.conf
-    ~/.visidatarc                                : ubuntu/home/.visidatarc
+    ~/.pdbrc.py                                  : ./ubuntu/home/.pdbrc.py
+    ~/.Xresources                                : ./ubuntu/home/.Xresources
+    ~/.gitconfig                                 : ./ubuntu/home/.gitconfig
+    ~/.common.sh                                 : ./ubuntu/home/.common.sh
+    ~/.condarc                                   : ./ubuntu/home/.condarc
+    ~/.prompt.zsh                                : ./ubuntu/home/.prompt.zsh
+    ~/.bash_profile                              : ./ubuntu/home/.bash_profile
+    ~/.zprofile                                  : ./ubuntu/home/.zprofile
+    ~/.bashrc                                    : ./ubuntu/home/.bashrc
+    ~/.inputrc                                   : ./ubuntu/home/.inputrc
+    ~/.Xdefaults                                 : ./ubuntu/home/.Xdefaults
+    ~/.prompt.sh                                 : ./ubuntu/home/.prompt.sh
+    ~/.zshrc                                     : ./ubuntu/home/.zshrc
+    ~/.profile                                   : ./ubuntu/home/.profile
+    ~/.tmux.conf                                 : ./ubuntu/home/.tmux.conf
+    ~/.visidatarc                                : ./ubuntu/home/.visidatarc
+    ~/.docker/                                   :
+        path: ./ubuntu/home/.docker/*
+        glob: true
     # local
     ~/.local/bin/                                :
-        path: ubuntu/home/.local/bin/*
+        path: ./ubuntu/home/.local/bin/*
         glob: true
-    ~/.local/share/applications/visidata.desktop : ubuntu/home/.local/share/applications/visidata.desktop
-    ~/.local/share/applications/visidata.png     : ubuntu/home/.local/share/applications/visidata.png
-    ~/.local/share/applications/st.desktop       : ubuntu/home/.local/share/applications/st.desktop
+    ~/.local/share/applications/visidata.desktop : ./ubuntu/home/.local/share/applications/visidata.desktop
+    ~/.local/share/applications/visidata.png     : ./ubuntu/home/.local/share/applications/visidata.png
+    ~/.local/share/applications/st.desktop       : ./ubuntu/home/.local/share/applications/st.desktop
     # config
-    ~/.config/rofi                               : ubuntu/home/.config/rofi
-    ~/.config/pip.conf                           : ubuntu/home/.config/pip.conf
-    ~/.config/i3/config                          : ubuntu/home/.config/i3/config
-    ~/.config/nvim/init.lua                      : ubuntu/home/.config/nvim/init.lua
-    ~/.config/picom.conf                         : ubuntu/home/.config/picom.conf
-    ~/.config/starship.toml                      : ubuntu/home/.config/starship.toml
-    ~/.config/i3blocks/config                    : ubuntu/home/.config/i3blocks/config
-    ~/.config/mimeapps.list                      : ubuntu/home/.config/mimeapps.list
+    ~/.config/rofi                               : ./ubuntu/home/.config/rofi
+    ~/.config/pip.conf                           : ./ubuntu/home/.config/pip.conf
+    ~/.config/i3/config                          : ./ubuntu/home/.config/i3/config
+    ~/.config/nvim/init.lua                      : ./ubuntu/home/.config/nvim/init.lua
+    ~/.config/picom.conf                         : ./ubuntu/home/.config/picom.conf
+    ~/.config/starship.toml                      : ./ubuntu/home/.config/starship.toml
+    ~/.config/i3blocks/config                    : ./ubuntu/home/.config/i3blocks/config
+    ~/.config/mimeapps.list                      : ./ubuntu/home/.config/mimeapps.list
     ~/.ipython/profile_default/ipython_config.py : ./ubuntu/home/.ipython/profile_default/ipython_config.py
