--- a/ubuntu/ubuntu.yaml
+++ b/ubuntu/ubuntu.yaml
@@ -22,13 +22,13 @@
     ~/.profile                                   : ./ubuntu/home/.profile
     ~/.tmux.conf                                 : ./ubuntu/home/.tmux.conf
     ~/.visidatarc                                : ./ubuntu/home/.visidatarc
-    # ~/.docker/:
-    #     path: ./ubuntu/home/.docker/*
-    #     glob: true
+    ~/.docker/:
+        glob: true
+        path: ./ubuntu/home/.docker/*
     # local
     ~/.local/bin/                                :
-        path: ./ubuntu/home/.local/bin/*
         glob: true
+        path: ./ubuntu/home/.local/bin/*
     ~/.local/share/applications/visidata.desktop : ./ubuntu/home/.local/share/applications/visidata.desktop
     ~/.local/share/applications/visidata.png     : ./ubuntu/home/.local/share/applications/visidata.png
     ~/.local/share/applications/st.desktop       : ./ubuntu/home/.local/share/applications/st.desktop
